twitchTv - fixed issue with overlapped footer

--- a/twitchTv/css/index.css
+++ b/twitchTv/css/index.css
@@ -1,7 +1,5 @@
-html {
-  min-height: 100%;
-  position: relative;
-
+html, body {
+  height: 100%;
 }
 li {
   color: #6441A4;
@@ -10,6 +8,8 @@ li p{
   font-size: 10px;
 }
 .body{
+  display: flex;
+  flex-direction: column;
   background-color: #6441A4;
   color: white;
   font-family: 'Bungee', cursive;
@@ -21,13 +21,9 @@ li p{
 .title{
   font-family: 'Bungee Shade', cursive;
 }
-
+.content{
+  flex: 1 0 auto;
+}
 .footer{
-  width: 100%;
-  height: 2em;
-  position: absolute;
-  bottom: 0px;
-  left: 0;
   text-align: center;
-  background-color: #6441A4;
 }
